--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,13 +8,19 @@ trigger:
 
 strategy:
   matrix:
-    linux:
+    jdk8_linux:
       imageName: "ubuntu-latest"
-    mac:
-      imageName: "macos-10.13"
-    windows:
+      jdk_version: "1.8"
+    jdk11_windows:
       imageName: "vs2017-win2016"
-  maxParallel: 3
+      jdk_version: "1.11"
+    # linux:
+    #   imageName: "ubuntu-latest"
+    # mac:
+    #   imageName: "macos-10.13"
+    # windows:
+    #   imageName: "vs2017-win2016"
+  maxParallel: 2
 
 pool:
   vmImage: $(imageName)
@@ -25,7 +31,7 @@ steps:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
+    jdkVersionOption: $(jdk_version)
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
